packages/kyvernoPolicies/chart/tests/vpol/disallow-pod-exec-cel/chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallow-pod-exec-target-pod
spec:
  terminationGracePeriodSeconds: 1
  imagePullSecrets:
  - name: private-registry
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
    command: ["sleep", "300"]
